--- a/index.html
+++ b/index.html
@@ -47,13 +47,15 @@
           />
         </div>
         <div class="user-info">
-          <img
-            src="IMG_6827-removebg-preview.jpg"
-            alt="luka-img"
-            class="user-img_profile-section"
-          />
-          <h3 class="user-name">Luka Popović</h3>
-          <p class="user-adres">Belgrade, Serbia</p>
+          <div class="user-info-mini-box">
+            <img
+              src="IMG_6827-removebg-preview.jpg"
+              alt="luka-img"
+              class="user-img_profile-section"
+            />
+            <h3 class="user-name">Luka Popović</h3>
+            <p class="user-adres">Belgrade, Serbia</p>
+          </div>
         </div>
       </div>
       <div class="new-post">
