Layout and container styles for new post and friends section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
           />
         </svg>
         <input type="text" placeholder="Find friends" class="find-friends" />
+
+        <ul class="friends_list"></ul>
       </div>
       <img
         src="IMG_6827-removebg-preview.jpg"
